// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnalyticsPage role customization > renders developer-scoped dashboard without team view option 1`] = `
<div>
  <header>
    <h1>
      KPI Dashboard
    </h1>
    <p>
      Find out how your team is doing
    </p>
  </header>
  <section
    class="section-card"
  >
    <div
      class="section-card__header"
    >
      <div>
        <h2
          class="section-card__title"
        >
          Filters
        </h2>
      </div>
      <div
        class="section-card__actions"
      >
        <div
          class="analytics-filters-actions"
        >
          <div
            class="filter-bar"
          >
            <div
              class="filter-bar__controls"
            >
              <label
                class="filter-bar__item"
              >
                <span
                  class="filter-bar__label"
                >
                  Developer
                </span>
                <select
                  class="filter-bar__select"
                >
                  <option
                    value="7"
                  >
                    Dev One
                  </option>
                </select>
              </label>
              <div
                class="filter-bar__date-group"
              >
                <label
                  class="filter-bar__item"
                >
                  <span
                    class="filter-bar__label"
                  >
                    Date
                  </span>
                  <div
                    class="filter-bar__date-fields"
                  >
                    <input
                      aria-label="Start date"
                      class="filter-bar__input"
                      type="date"
                      value=""
                    />
                    <span
                      class="filter-bar__date-separator"
                    >
                      to
                    </span>
                    <input
                      aria-label="End date"
                      class="filter-bar__input"
                      type="date"
                      value=""
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <button
            class="btn btn-ghost analytics-filters-clear"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
    <div />
  </section>
  <div
    class="kpi-grid"
  >
    <div>
      DeveloperHours:
      7
    </div>
    <div>
      FinishedAvg:
      7
    </div>
    <div>
      WorkedAvg:
      7
    </div>
  </div>
  <div>
    KPI:
    100.0%
  </div>
  <div>
    <div
      class="analytics-grid__full-row"
    >
      <div>
        StatusChart:
        7
      </div>
    </div>
    <div
      class="analytics-grid__full-row"
    >
      <div>
        ByDate:
        1
      </div>
    </div>
    <div>
      Completion:
      2
    </div>
    <div>
      TaskType:
      1
    </div>
    <div>
      TimeChart:
      7
    </div>
  </div>
</div>
`;

exports[`AnalyticsPage role customization > renders manager dashboard and matches snapshot 1`] = `
<div>
  <header>
    <h1>
      KPI Dashboard
    </h1>
    <p>
      Find out how your team is doing
    </p>
  </header>
  <section
    class="section-card"
  >
    <div
      class="section-card__header"
    >
      <div>
        <h2
          class="section-card__title"
        >
          Filters
        </h2>
      </div>
      <div
        class="section-card__actions"
      >
        <div
          class="analytics-filters-actions"
        >
          <div
            class="filter-bar"
          >
            <div
              class="filter-bar__controls"
            >
              <label
                class="filter-bar__item"
              >
                <span
                  class="filter-bar__label"
                >
                  Developer
                </span>
                <select
                  class="filter-bar__select"
                >
                  <option
                    value="all"
                  >
                    Team view
                  </option>
                  <option
                    value="1"
                  >
                    Alice Dev
                  </option>
                  <option
                    value="2"
                  >
                    Bob Dev
                  </option>
                </select>
              </label>
              <div
                class="filter-bar__date-group"
              >
                <label
                  class="filter-bar__item"
                >
                  <span
                    class="filter-bar__label"
                  >
                    Date
                  </span>
                  <div
                    class="filter-bar__date-fields"
                  >
                    <input
                      aria-label="Start date"
                      class="filter-bar__input"
                      type="date"
                      value=""
                    />
                    <span
                      class="filter-bar__date-separator"
                    >
                      to
                    </span>
                    <input
                      aria-label="End date"
                      class="filter-bar__input"
                      type="date"
                      value=""
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <button
            class="btn btn-ghost analytics-filters-clear"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
    <div />
  </section>
  <div
    class="kpi-grid"
  >
    <div>
      DeveloperHours:
      all
    </div>
    <div>
      FinishedAvg:
      team
    </div>
    <div>
      WorkedAvg:
      team
    </div>
  </div>
  <div>
    KPI:
    100.0%
  </div>
  <div>
    <div
      class="analytics-grid__full-row"
    >
      <div>
        StatusChart:
        all
      </div>
    </div>
    <div
      class="analytics-grid__full-row"
    >
      <div>
        ByDate:
        1
      </div>
    </div>
    <div>
      Completion:
      2
    </div>
    <div>
      TaskType:
      1
    </div>
    <div>
      TimeChart:
      all
    </div>
  </div>
</div>
`;
